ドラッグを一つの記録に，また細かい修正